[tool.poetry]
name = "nb"
version = "1.0"
description = "Running Jupyter notebook on replit.com"
authors = ["Michael J. Booth <michael@databooth.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
